--- a/40 Module Assignments/01 Module 1/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Module Assignments/01 Module 1/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -84,9 +84,8 @@ Using Eq.~\ref{equation:circularDuct}, the lowest cut-on frequency for this circ
 
 \vspace{-0.25cm}
 \begin{equation*}
-    f_{cut-on} = 0.568 \cdot \frac{ 343~\frac{m}{s} }{ 0.17~m } = \boldsymbol{1,114.5~Hz}
+    f_{cut-on} = 0.568 \cdot \frac{ 1,500~\frac{m}{s} }{ 0.17~m } = \boldsymbol{1,114.5~Hz}
 \end{equation*}
-
 
 
 
@@ -94,10 +93,51 @@ Using Eq.~\ref{equation:circularDuct}, the lowest cut-on frequency for this circ
 
 \subsection*{Problem 1c}
 
+The lowest cut-on frequency for this circular duct with water flow can be calculated using Eq.~\ref{equation:circularDuct},
+
+\vspace{-0.25cm}
+\begin{equation*}
+    f_{cut-on} = 0.568 \cdot \frac{ 1,500~\frac{m}{s} }{ 0.17~m } = \boldsymbol{4,873.9~Hz}
+\end{equation*}
+
+The lowest cut-on frequency for water is considerable larger than it is for air flow.
 
 
 
+
+
+\newpage
 \subsection*{Problem 1d}
+
+The speed of sound in air is calculated by,
+
+\vspace{-0.25cm}
+\begin{equation}
+    c = \sqrt{ \gamma \cdot R \cdot T_K }
+    \label{equation:speedOfSoundInAir}
+\end{equation}
+
+where $\gamma$ is the ratio of specific heats, $R = 287~\frac{J}{kg \cdot K}$ is the gas constant, and $T_K$ is the absolute temperature in Kelvin.
+
+
+speed of sound in air, 343~$\frac{m}{s}$,  and $d$ is diameter of the circular duct.
+
+
+
+
+\vspace{-0.5cm}
+\begin{figure}[!htb]
+
+    \center
+        \includegraphics[ scale = 0.8, keepaspectratio ]{Cut-on Frequency Versus Temperature - Sunday, January 19, 2025.pdf}
+
+    \vspace{-5.2cm}
+    \caption{ph.}
+    \label{figure:cuton_frequency_versus_temperature}
+
+\end{figure}
+
+
 
 
 
@@ -105,9 +145,67 @@ Using Eq.~\ref{equation:circularDuct}, the lowest cut-on frequency for this circ
 \subsection*{Problem 1e}
 
 
+% Question:  Are cut-on frequencies higher for a circular or rectangular duct for a given cross-sectional area?
+
+% The lowest cut-on frequency is higher for a circular duct than for a
+% rectangular duct for a given cross-sectional area.
+
+% For the dimensions given in class, the rectangular duct is not square.
+% This produces a larger dimension and thus a smaller, lowest cut-on
+% frequency.
+
+% If the rectangular duct is square dimensions on the order of the circular
+% duct diameter with the same cross-sectional area, the the cut-on
+% frequencies are approximately equal.
+
+
+% Question:  What about in air versus water?
+
+% The lowest cut-on frequency is larger with water than air.  This due to
+% the fact that the cut-on frequency is proportional to the speed of sound
+% and the speed of sound in water is greater than it is in air.
+
+
+% Question:  What about cold versus hot air?
+
+% For a circular pipe, the cut-on frequency is higher in warm air than cold
+% air.
+
+
+
 
 
 \end{document}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
