Draft of Module 1 assignment done.

--- a/40 Module Assignments/01 Module 1/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Module Assignments/01 Module 1/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -117,22 +117,25 @@ The speed of sound in air is calculated by,
     \label{equation:speedOfSoundInAir}
 \end{equation}
 
-where $\gamma$ is the ratio of specific heats, $R = 287~\frac{J}{kg \cdot K}$ is the gas constant, and $T_K$ is the absolute temperature in Kelvin.
+where $\gamma = 1.4$ is the ratio of specific heats, $R = 287~\frac{J}{kg \cdot K}$ is the gas constant, and $T_K$ is the absolute temperature in Kelvin.
+
+\vspace{0.25cm}
+Figure~\ref{figure:cuton_frequency_versus_temperature} illustrates how the lowest cut-on frequency changes as the air heats from $0^{\circ}$ to $500^{\circ}$ Celsius.
+
+\vspace{0.25cm}
+The square-root relationship between temperature and the speed of sound in air is apparent and governs the behaviour of the cut-on frequency.
 
 
-speed of sound in air, 343~$\frac{m}{s}$,  and $d$ is diameter of the circular duct.
 
 
-
-
-\vspace{-0.5cm}
+\vspace{-4.8cm}
 \begin{figure}[!htb]
 
     \center
         \includegraphics[ scale = 0.8, keepaspectratio ]{Cut-on Frequency Versus Temperature - Sunday, January 19, 2025.pdf}
 
     \vspace{-5.2cm}
-    \caption{ph.}
+    \caption{Lowest cut-on frequency for a circular 5 cm diameter duct versus air temperature.}
     \label{figure:cuton_frequency_versus_temperature}
 
 \end{figure}
@@ -144,32 +147,32 @@ speed of sound in air, 343~$\frac{m}{s}$,  and $d$ is diameter of the circular d
 
 \subsection*{Problem 1e}
 
+ \textbf{Question:  Are cut-on frequencies higher for a circular or rectangular duct for a given cross-sectional area?}
 
-% Question:  Are cut-on frequencies higher for a circular or rectangular duct for a given cross-sectional area?
+ The lowest cut-on frequency is higher for a circular duct than for a
+ rectangular duct for a given cross-sectional area.
 
-% The lowest cut-on frequency is higher for a circular duct than for a
-% rectangular duct for a given cross-sectional area.
-
-% For the dimensions given in class, the rectangular duct is not square.
-% This produces a larger dimension and thus a smaller, lowest cut-on
-% frequency.
-
-% If the rectangular duct is square dimensions on the order of the circular
-% duct diameter with the same cross-sectional area, the the cut-on
-% frequencies are approximately equal.
+ For the dimensions given in class, the rectangular duct is not square.
+ This produces a larger dimension and thus a smaller, lowest cut-on
+ frequency.  If the rectangular duct is square dimensions on the order 
+ of the circular duct diameter with the same cross-sectional area, the
+ cut-on frequencies are approximately equal.
+ 
 
 
-% Question:  What about in air versus water?
+\vspace{0.25cm}
+\textbf{Question:  What about in air versus water?}
 
-% The lowest cut-on frequency is larger with water than air.  This due to
-% the fact that the cut-on frequency is proportional to the speed of sound
-% and the speed of sound in water is greater than it is in air.
+ The lowest cut-on frequency is larger for water than for air.  The cut-on 
+ frequency is proportional to the speed of sound and the speed of sound in 
+ water is greater than the speed of sound in air.
 
 
-% Question:  What about cold versus hot air?
 
-% For a circular pipe, the cut-on frequency is higher in warm air than cold
-% air.
+\vspace{0.25cm}
+\textbf{Question:  What about cold versus hot air?}
+
+ The lowest cut-on frequency is higher for warm air than it is for cold air.
 
 
 
