--- a/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -30,6 +30,7 @@
 \maketitle
 
 
+\section*{Problem 1 - Cut-on Frequencies in Ducts and Pipes}
 
 \subsection*{Problem 1a}
 
@@ -175,6 +176,27 @@ The square-root relationship between temperature and the speed of sound in air i
 \textbf{Question:  What about cold versus hot air?}
 
  The lowest cut-on frequency is higher for warm air than it is for cold air.
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+\newpage
+\section*{Problem 2 - Muffler Design Comparison}
+
+\subsection*{Problem 2a}
+
+\subsection*{Problem 2b}
+
+\subsection*{Problem 2c}
+
+
+
+
 
 
 
@@ -182,7 +204,61 @@ The square-root relationship between temperature and the speed of sound in air i
 
 
 \newpage
-\section*{Appendix A:  Matlab Code}
+\section*{Problem 3 - Bugle Recorder}
+
+\subsection*{Problem 3a}
+
+\subsection*{Problem 3b}
+
+
+
+
+
+
+
+
+
+
+\newpage
+\section*{Problem 4 - Intake Duct}
+
+\subsection*{Problem 4a}
+
+\subsection*{Problem 4b}
+
+\subsection*{Problem 4c}
+
+\subsection*{Problem 4d}
+
+
+
+
+
+
+
+
+
+
+\newpage
+\section*{Problem 5 - Intake Duct Silencer}
+
+\subsection*{Problem 5a}
+
+\subsection*{Problem 5b}
+
+\subsection*{Problem 5c}
+
+\subsection*{Problem 5d}
+
+\subsection*{Problem 5e}
+
+
+
+
+
+
+\newpage
+\section*{Appendix A:  Matlab Code - Problem 1}
 
 \begin{lstlisting}[style=Matlab-editor, basicstyle=\mlttfamily, numbers=none, keepspaces, mlshowsectionrules]
 %% Synopsis
