--- a/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -176,17 +176,24 @@ The square-root relationship between temperature and the speed of sound in air i
 \textbf{Question:  What about cold versus hot air?}
 
  The lowest cut-on frequency is higher for warm air than it is for cold air.
- 
- 
- 
- 
- 
- 
- 
- 
- 
+
+
+
+
+
+
+
+
+
 \newpage
 \section*{Problem 2 - Muffler Design Comparison}
+
+ Assumptions:
+
+   No resistive terms (i.e., $R_A$ is zero).
+   No flow.
+
+There is no damping in the system;  resonances will be artificially high.
 
 \subsection*{Problem 2a}
 
