--- a/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -195,6 +195,18 @@ The square-root relationship between temperature and the speed of sound in air i
 
 There is no damping in the system;  resonances will be artificially high.
 
+
+ End corrections;  no physical meaning.
+
+
+ Peak occur at a quarter wavelength;  extension tube at outlet.
+
+ 1 foot or 0.3048 meters.
+
+
+ Extension tube aids quarter wavelenths.
+
+
 \subsection*{Problem 2a}
 
 \subsection*{Problem 2b}
@@ -212,6 +224,10 @@ There is no damping in the system;  resonances will be artificially high.
 
 \newpage
 \section*{Problem 3 - Bugle Recorder}
+
+Diameters of holes should be smaller than a wavelength.
+
+$R_A$ is neglected (energy loss).
 
 \subsection*{Problem 3a}
 
