--- a/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -188,16 +188,16 @@ The square-root relationship between temperature and the speed of sound in air i
 \newpage
 \section*{Problem 2 - Muffler Design Comparison}
 
-For these muffler comparisons, it is assumed that there is no resistive terms (i.e., damping) and no flow.
+For these muffler comparisons, it is assumed that there is no resistive terms (i.e., damping) and no flow.  Since transmission losses are plotted, the end corrections (i.e., load impedance at outlet of the system) have no physical meaning and are not accounted for in the computations.
 
    
 \subsection*{Problem 2a}
 
-Figure~\ref{figure:problem2figure1} shows the transmission loss profiles for the 
+Figure~\ref{figure:problem2figure1} shows the transmission loss profile for the simple expansion chamber (red, dashed line).
 
-There is no damping in the system;  resonances will be artificially high.
 
-Transmission loss - End corrections;  no physical meaning.
+
+
 
 Peak occur at a quarter wavelength;  extension tube at outlet.
 
@@ -231,7 +231,11 @@ Extension tube aids quarter wavelenths.
 
 \subsection*{Problem 2b}
 
+There is no damping in the system;  resonances will be artificially high.
+
 \subsection*{Problem 2c}
+
+There is no damping in the system;  resonances will be artificially high.
 
 
 
